--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "proxy": "https://to-let-globe-dynamic-blog-platform.onrender.com",
+  "proxy": "http://localhost:4000",
   "private": true,
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^42.0.1",
